cmake_minimum_required(VERSION 3.27)
project(TpPoo)

set(CMAKE_CXX_STANDARD 17)
include_directories("/home/amani/CLionProjects/TpPoo/tp1_ex1")
include_directories("TpPoo/tp1_ex2")

add_executable(tp1_ex1
        "/home/amani/CLionProjects/TpPoo/tp1_ex1/point.cpp")
add_executable(Tp1_ex2
        "/home/amani/CLionProjects/TpPoo/tp1_ex2/pointEx2.cpp")
add_executable(Tp1_ex3
        "/home/amani/CLionProjects/TpPoo/tp1_ex3/pointEx3.cpp")
add_executable(Tp1_ex4
        "/home/amani/CLionProjects/TpPoo/tp1_ex4/pointEx4.cpp")
add_executable(Tp2Comp_ex1
        "/home/amani/CLionProjects/TpPoo/tp2Comp_ex1/PointC1.cpp")
add_executable(Tp2Comp_ex2
        "/home/amani/CLionProjects/TpPoo/tp2Comp_ex2/cercle.cpp")

add_executable(Tp2_ex1
        "/home/amani/CLionProjects/TpPoo/tp2_ex1/Personne.cpp")
add_executable(Tp2_ex2
 "/home/amani/CLionProjects/TpPoo/tp2_ex2/Ppoint.cpp")
add_executable(Tp2_ex3
"/home/amani/CLionProjects/TpPoo/tp2_ex3/VoitureAutonome.cpp")
add_executable(Tp3_ex1
        "/home/amani/CLionProjects/TpPoo/tp3_ex1/somme.cpp")
add_executable(Tp3_ex3
        "/home/amani/CLionProjects/TpPoo/tp3_ex3/pointcol.cpp")
add_executable(Tp3_ex4
        "/home/amani/CLionProjects/TpPoo/tp3_ex4/point.cpp")